# Morpheus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
manuscript/: draft.md  manuscript.md  manuscript.tex  references.bib  references.md  supplementary.tex  supplementary_table_s1.csv
manuscript/reviews/: a_stats.md  b_citations.md  c_consistency.md
manuscript/sections/: discussion.md  intro.md  methods.md  results.md
manuscript/tmlr/: README.md  manuscript.tex  supplementary.tex
morpheus/: paths.py
morpheus/analysis/: figures.py  figures_v2.py  stats.py
morpheus/data/: build_gene_map.py  build_splits.py  pull_census.py  pull_dorothea.py
morpheus/embed/: bag_of_genes.py  extract.py
morpheus/probes/: layerwise.py  run.py
results/: stats_summary.json
results/probes/: layer1__Geneformer-V2-104M__mlp.parquet  layer1__Geneformer-V2-316M.parquet  layer1__Geneformer-V2-316M__mlp.parquet  layer1__Geneformer-V2-316M_random_init.parquet  layer1__bag_of_genes.parquet  layer1__bag_of_genes__mlp.parquet  layer1__geneformer.parquet  layer1__geneformer__mlp.parquet  layer1__geneformer_random_init.parquet  layer1_per_layer__Geneformer-V2-104M_layerwise.parquet  layer2__Geneformer-V2-104M__mlp.parquet  layer2__Geneformer-V2-104M__neg-random.parquet  layer2__Geneformer-V2-104M__reg-collectri.parquet  layer2__Geneformer-V2-104M__reg-dorothea.parquet  layer2__Geneformer-V2-316M.parquet  (+30 more)
scripts/: auto_v2_316m.sh  cite_replace.py  run_probes_only.sh  run_rest.sh  run_sensitivity.sh  run_v2_316m_probes.sh
shared/: contracts.md  tickets-status.md
(+12 files in other folders)
