[project]
name = "morpheus"
version = "0.1.0"
description = "Probing single-cell foundation models for regulatory hierarchy"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.1",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=15",
    "scanpy>=1.10",
    "anndata>=0.10",
    "cellxgene-census>=1.15",
    "decoupler>=1.7",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morpheus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
